--- a/client/src/style/css/Buttons.css
+++ b/client/src/style/css/Buttons.css
@@ -9,9 +9,9 @@
   position: relative;
   width: 35%;
   height: 5vh;
-  left: 32.5%;
+  margin-left: 32.5vw;
   margin-top: 5vh;
-  font-size: 3.5vw;
+  font-size: 2vh;
   letter-spacing: 0.01em;
 
   background: #F08A6E;
