--- a/client/src/style/css/CriarDivida.css
+++ b/client/src/style/css/CriarDivida.css
@@ -14,17 +14,17 @@
     overflow: hidden;
 }
 
-  /* estilos */
+ .sidebar-criar-divida {
+   visibility: hidden;
+ }
 
 .criar-divida-titulo {
     position: relative;
-    width: 100%;
-    height: 100%;
+    height: 5vh;
     top: 4vh;
     font-family: fonteTitulo;
-    font-style: normal;
     font-weight: bold;
-    font-size: 4vw;
+    font-size: 2vh;
     text-align: center;
     letter-spacing: 0.01em;
     color: #3E3C39;
@@ -35,7 +35,7 @@
     position: relative;
     font-family: fonteLabel;
     font-weight: 550;
-    font-size: 4.5vw;
+    font-size: 2.1vh;
     display: flex;
     color: #3E3C39;
 
@@ -48,10 +48,9 @@
     width: 67%;
     height: 25vh;
     left: 12.5%;
-    padding-left: 2.5vh;
+    padding-left: 4vw;
     padding-top: 2vh;
-    font-size: 3.5vw;
-    display: flex;
+    font-size: 2vh;
     letter-spacing: 0.01em;
     resize: none;
     background: #FFFFFF;
@@ -63,6 +62,10 @@
     border: #ffffff;
     
     color: #AEADAA;
+}
+
+.button-criar-divida {
+  margin-bottom: 4vh;
 }
 
 
@@ -78,7 +81,7 @@ input[type="number"] {
 
 /* posições */
 .credor-css {
-    margin-top: 15%;
+    margin-top: 7vh;
     height: 11.5vh;
 }
 
@@ -88,6 +91,91 @@ input[type="number"] {
 
 .quantia-css {
     height: 11.5vh;
+}
+
+.descricao-css {
+  height: 22vh;
+}
+
+.logo-original {
+  visibility: hidden;
+}
+
+@media (min-width: 961px){
+
+  .topbar-criar-divida {
+    visibility: hidden;
+  }
+
+  .sidebar-criar-divida {
+    visibility: visible;
+    width: 20%;
+  }
+
+  .criar-divida-titulo {
+    margin-left: 17vw;
+    font-size: 2.5vh;
+  }
+
+  .labelInput {
+    width: 100%;
+  }
+  .labelInput label {
+    height: 3.5vh;
+
+  }
+
+  .inputs{
+    display: flex;
+    margin-bottom: 1vh;
+  }
+
+  .labelInput input {
+    height: 6vh;
+    width: 27vw;
+    padding-left: 1.5vw;
+  }
+  
+  .credor-css {
+    margin-top: 18vh;
+    margin-left: 22.5vw;
+    height: 14vh;
+    width: 100%;
+  }
+
+  .devedor-css {
+    margin-left: 22.5vw;
+    height: 14vh;
+    width: 100%;
+  }
+
+  .quantia-css {
+    margin-left: 22.5vw;
+    height: 14vh;
+    width: 100%;
+  }
+
+  .descricao-css {
+    margin-top: 18vh;
+    margin-left: 7vw;
+    width: 27vw;
+  }
+
+  .descricao-label{
+    height: 3.5vh;
+  }
+
+  .input-descricao {
+      width: 100%;
+      height: 32vh;
+      padding-left: 1vw;
+      padding-top: 2vh;
+  }
+
+  .button-criar-divida {
+    width: 27%;
+    margin-left: 22vw;
+  }
 }
 
 
@@ -130,6 +218,7 @@ input[type="number"] {
   border-radius: 50%;
 
   background-color: #F08A6E;
+  cursor: pointer;
 }
 
 .check {
@@ -143,13 +232,7 @@ input[type="number"] {
   border-right: 7px solid #FFFFFF;
   left: 48.5%;
   bottom: 42%;
-}
-
-.circle:hover{
-  cursor:pointer;
-}
-.check:hover{
-  cursor:pointer;
+  cursor: pointer;
 }
 
 
