--- a/client/src/style/css/LabelsInputs.css
+++ b/client/src/style/css/LabelsInputs.css
@@ -7,7 +7,7 @@
     position: relative;
     font-family: fonteLabel;
     font-weight: 550;
-    font-size: 4.5vw;
+    font-size: 2.1vh;
     display: flex;
     outline: none;
     color: #3E3C39;
@@ -23,8 +23,8 @@
     width: 67%;
     height: 4vh;
     left: 12.5%;
-    padding-left: 2.5vh;
-    font-size: 3.5vw;
+    padding-left: 4vw;
+    font-size: 2vh;
     letter-spacing: 0.01em;
     background: #FFFFFF;
     outline: none;
@@ -35,10 +35,11 @@
     color: #AEADAA;
 }
 
-.labelInput .nameinput{
+
+.labelInput .nameinput, .lastnameinput{
     width: 12vh;
     height: 4vh;
-    margin-left: 5vh;
+    margin-left: 3.5vh;
     padding-left: 2.5vh;
     font-size: 12px;
     display: flex;
@@ -52,25 +53,8 @@
     color: #AEADAA;
 }
 
-
-.labelInput .lastnameinput{
-    width: 12vh;
-    height: 4vh;
-    padding-left: 2.5vh;
-    font-size: 12px;
-    display: flex;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
-    outline: none;
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
-    color: #AEADAA;
-}
-
 .labelInput .name{
-    margin-left: 8vh;
+    margin-left: 4.5vh;
 }
 
 .labelInput .lastname{
